# AWQ-Converter

./: .cursorignore  .gitignore  =0.45.0  INSTALL.md  LICENSE  MIGRATION.md  README.md  REQUIREMENTS.yaml  USAGE.md  migrate_to_pyproject.py  pyproject.toml  requirements.txt  test_installation.py  test_quantization.py
examples/: README.md  advanced_usage.py  basic_usage.py  benchmark.py  config_example.yaml  load_quantized_model.py
src/awq_quantizer/: __init__.py  main.py
src/awq_quantizer/config/: default_config.yaml
src/awq_quantizer/model_loading/: __init__.py  safetensors_loader.py
src/awq_quantizer/quantization/: __init__.py  awq.py
src/awq_quantizer/utils/: __init__.py  config.py  logger.py  tensor_utils.py
